# OpenGL

./: .gitignore  CMakeLists.txt  README.md
assets/f22/: F22.mtl
assets/gm-bigcity/: gm_bigcity.mtl
assets/ornithopter/: heli.mtl
configuration/: root_directory.h.in
include/: box.h  camera.h  cube.h  filesystem.h  mesh.h  model.h  shader.h  shader_s.h  skybox.h  window.h
include/glad/: glad.h
shaders/: model_loading.fs
src/: camera.cpp  cube.cpp  cube.fs  filesystem.cpp  glad.c  light_cube.fs  main.cpp  mesh.cpp  model.cpp  model_loading.vs  shader.cpp  skybox.cpp  window.cpp
